tests/neg/i18750.scala
//> using options -explain

val do = 23 // error
val if = 23 // error
val val = 23 // error
val a, if = 23 // error

def do; // error
var do; // error
class do; // error
object if; // error // error
trait else; // error
type for; // error
